# RGBA

./: .gitignore  CMakeLists.txt
include/: RGBA.h
src/: main.cpp
tests/: RGBATests.cpp
